'currentcolor' doesn't need setHasExplicitlyInheritedProperties marking anymore https://bugs.webkit.org/show_bug.cgi?id=210017

Reviewed by Darin Adler.

Source/WebCore:

Removing this marking reveals problems in style update avoidance code in CSSComputedStyleDeclaration
that also need to be addressed. The problems are not specific to exlicit 'currentcolor', they also reproduce
with the initial value (thus the new test).

Test: fast/css/currentColor-initial-style-update.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::nonInheritedColorPropertyHasValueCurrentColor):

Add a helper.

(WebCore::hasValidStyleForProperty):

Treat a non-inherited color property as inherited if it is 'currentcolor'.

(WebCore::updateStyleIfNeededForProperty):

Expand shorthands so properties like border-color test correctly.

* css/CSSProperty.cpp:
(WebCore::CSSProperty::isColorProperty):

Move here from CSSParserFastPaths.

* css/CSSProperty.h:
* css/parser/CSSParserFastPaths.cpp:
(WebCore::CSSParserFastPaths::maybeParseValue):
(WebCore::isColorPropertyID): Deleted.
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::unresolvedColorForProperty const):

Factor into a helper.
Handle all color values.

(WebCore::RenderStyle::colorResolvingCurrentColor const):

Renamed for clarity and some cleanups.

(WebCore::RenderStyle::visitedDependentColor const):
(WebCore::RenderStyle::colorIncludingFallback const): Deleted.
* rendering/style/RenderStyle.h:
(WebCore::RenderStyle::isCurrentColor):
* style/StyleBuilderState.cpp:
(WebCore::Style::BuilderState::colorFromPrimitiveValue const):

Remove setHasExplicitlyInheritedProperties marking.

LayoutTests:

* fast/css/currentColor-initial-style-update-expected.txt: Added.
* fast/css/currentColor-initial-style-update.html: Added.


Canonical link: https://commits.webkit.org/222976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259585 268f45cc-cd09-0410-ab3c-d52691b4dbfc